fix(coap): use fluent interface as design example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,11 +75,13 @@ else()
   )
 
   list(APPEND _dut_header_files
+    coap.hpp
     code.hpp
     type.hpp
   )
 
   list(APPEND _dut_source_files
+    coap.cpp
     code.cpp
     type.cpp
   )
@@ -105,6 +107,7 @@ else()
     code/test-data.hpp
     type/test-data.hpp
     type/type.cpp
+    coap.cpp
     runner.cpp
   )
 
