feat: wip on scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-#####################################################
-# macOS                                             #
-# Source: https://www.gitignore.io                  #
-#####################################################
+################################################################################
+# macOS
+# Source: https://www.gitignore.io
+################################################################################
 # General
 .DS_Store
 .AppleDouble
@@ -30,10 +30,10 @@ Temporary Items
 .apdisk
 
 
-#####################################################
-# Linux                                             #
-# Source: https://www.gitignore.io                  #
-#####################################################
+###########################################################################################################
+# Linux
+# Source: https://www.gitignore.io
+################################################################################
 *~
 
 # temporary files which can be created if a process still has a handle open of a deleted file
@@ -49,10 +49,10 @@ Temporary Items
 .nfs*
 
 
-#####################################################
-# Windows                                           #
-# Source: https://www.gitignore.io                  #
-#####################################################
+################################################################################
+# Windows
+# Source: https://www.gitignore.io
+################################################################################
 # Windows thumbnail cache files
 Thumbs.db
 Thumbs.db:encryptable
@@ -79,16 +79,16 @@ $RECYCLE.BIN/
 *.lnk
 
 
-#####################################################
-# dotenv                                            #
-#####################################################
+################################################################################
+# dotenv
+################################################################################
 .env
 
 
-#####################################################
-# CMake                                             #
-# Source: https://www.gitignore.io                  #
-#####################################################
+################################################################################
+# CMake
+# Source: https://www.gitignore.io
+################################################################################
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
@@ -106,10 +106,10 @@ _deps
 *-prefix/
 
 
-#####################################################
-# Node                                              #
-# Source: https://www.gitignore.io                  #
-#####################################################
+################################################################################
+# Node
+# Source: https://www.gitignore.io
+################################################################################
 # Logs
 logs
 *.log
@@ -187,7 +187,7 @@ typings/
 # nuxt.js build output
 .nuxt
 
-# react / gatsby 
+# react / gatsby
 public/
 
 # vuepress build output
@@ -206,10 +206,10 @@ public/
 dist/
 
 
-#####################################################
-# C                                                 #
-# Source: https://www.gitignore.io                  #
-#####################################################
+################################################################################
+# C
+# Source: https://www.gitignore.io
+################################################################################
 # Prerequisites
 *.d
 
@@ -264,10 +264,10 @@ Mkfile.old
 dkms.conf
 
 
-#####################################################
-# C++                                               #
-# Source: https://www.gitignore.io                  #
-#####################################################
+################################################################################
+# C++
+# Source: https://www.gitignore.io
+################################################################################
 # Prerequisites
 *.d
 
@@ -300,3 +300,13 @@ dkms.conf
 *.exe
 *.out
 *.app
+
+
+################################################################################
+# Custom
+################################################################################
+# CMake build directory.
+build/
+
+# Typescript output directory.
+dist/
