--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,7 @@ else()
     type/test-data.hpp
     type/type.cpp
     header/header.cpp
+    header/test-data.hpp
     coap.cpp
     runner.cpp
   )
@@ -170,7 +171,7 @@ else()
   target_compile_options(${PROJECT_NAME}
     PRIVATE
       # -Werror
-      # -Wall
+      -Wall
   )
 
 endif()
