--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "lint-es:file:fix": "eslint --ext .ts,.tsx,.js,.jsx,.json --fix",
     "format": "prettier --write \"**/*.{js,jsx,vue,ts,css,less,scss,html,htm,json,md,markdown,yml,yaml}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,vue,ts,css,less,scss,html,htm,json,md,markdown,yml,yaml}\"",
+    "format-cpp": "clang-format -i --glob=\"{src,test}/**/*.{c,cpp,h,hpp}\"",
     "format:file": "prettier --write",
+    "format-cpp:file": "clang-format -i",
     "release:version": "next-standard-version",
     "release:changelog": "standard-version --dry-run --skip.commit=true --skip.tag=true",
     "release:commit": "git commit --allow-empty -m \"chore(release): trigger release process [ci release]\"",
     "release:message": "chalk -t \"Run {green.bold git push} to publish the release or {red.bold git reset HEAD^} to undo the release.\"",
-    "release": "run-s release:changelog release:commit release:message"
+    "release": "run-s release:changelog release:commit release:message",
+    "build-ts": "tsc",
+    "generate-header-data": "node_modules/.bin/ts-node scripts/header/generate-test-values"
   },
   "repository": {
     "type": "git",
@@ -33,9 +37,12 @@
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
+    "@types/node": "14.0.5",
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "2.34.0",
+    "chalk": "4.0.0",
     "chalk-cli": "4.1.0",
+    "coap-packet": "0.1.14",
     "concurrently": "5.2.0",
     "eslint": "7.0.0",
     "eslint-config-prettier": "6.11.0",
@@ -47,6 +54,7 @@
     "npm-run-all": "4.1.5",
     "prettier": "2.0.5",
     "standard-version": "8.0.0",
+    "ts-node": "8.10.1",
     "typescript": "3.9.3"
   }
 }
